# ai-project-orchestrator

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile  docker-compose.yml
orchestrator/: api.py  main.py
orchestrator/agents/: prompts.py  worker.py
orchestrator/config/: settings.py
orchestrator/gates/: manager.py  state.py
orchestrator/middleware/: logging.py
orchestrator/models/: schemas.py
orchestrator/tools/: gate_tools.py  jira_tools.py  registry.py  status_tools.py
scripts/: example_request.sh  run_local.sh
tests/: test_api.py  test_gates.py
