[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-project-orchestrator"
version = "0.1.0"
description = "Multi-agent AI workflow orchestrator with human-in-the-loop gates"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "redis>=5.2.0",
    "claude-agent-sdk>=0.1.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
    "structlog>=24.4.0",
    "python-multipart>=0.0.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.14.0",
    "fakeredis>=2.26.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.hatch.build.targets.wheel]
packages = ["orchestrator"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "S", "B", "A", "SIM", "TCH"]
ignore = [
    "S104",  # binding to 0.0.0.0 is intentional for containers
    "S603",  # subprocess calls with fixed args are safe
    "S607",  # partial executable paths (git) are acceptable
    "S108",  # /tmp usage is intentional, overridden via env var
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
